--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </dd>
             <dt>Utiliser le compteur sur l'application</dt>
             <dd>
-                Ouvrir l'application dans le navigateur <strong>Edge</strong> ou <strong>Chrome</strong>
+                Ouvrir l'application dans le navigateur <strong>Edge</strong> ou <strong>Chrome</strong><br>
                 Cliquer le bouton <strong>Choisir le fichier texte</strong><br>
                 Modifier le nom du compteur à sa guise dans le champ de texte dédié<br>
                 Incrémenter ou décrémenter le score avec, respectivement, les boutons <strong>+</strong> et <strong>-</strong>
