--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <dd>
                 Dans OBS, créer une source <strong>Texte (GDI+)</strong><br>
                 Cocher la case <strong>Lire à partir d'un fichier</strong><br>
-                Cliquer le bouton <strong>Parcourir</strong> puis sélectionner le fichier TXT créé<br> puis valider la source
+                Cliquer le bouton <strong>Parcourir</strong> puis sélectionner le fichier TXT créé puis valider la source<br>
                 L'affichage se met à jour en temps réel
             </dd>
         </dl>
